--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage": "https://chirag-varshney-0598.github.io/portfolio-ca-reactjs-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.7",
+    "gh-pages": "^5.0.0",
     "gojs": "^2.1.41",
     "gojs-react": "^1.1.1",
     "html-dom-parser": "^3.1.3",
@@ -82,7 +84,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
